--- a/src/pages/ru/services/index.astro
+++ b/src/pages/ru/services/index.astro
@@ -73,7 +73,7 @@ const t = useTranslations(lang);
             <div class="relative pl-16">
               <dt class="text-base font-semibold leading-7">
                 <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-primary">
-                  <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                  <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M12 16.5V9.75m0 0l3 3m-3-3l-3 3M6.75 19.5a4.5 4.5 0 01-1.41-8.775 5.25 5.25 0 0110.233-2.33 3 3 0 013.758 3.848A3.752 3.752 0 0118 19.5H6.75z" />
                   </svg>
                   <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
@@ -90,7 +90,7 @@ const t = useTranslations(lang);
             <div class="relative pl-16">
               <dt class="text-base font-semibold leading-7">
                 <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-primary">
-                  <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                  <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z" />
                   </svg>
                 </div>
@@ -101,7 +101,7 @@ const t = useTranslations(lang);
             <div class="relative pl-16">
               <dt class="text-base font-semibold leading-7">
                 <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-primary">
-                  <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                  <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99" />
                   </svg>
                 </div>
@@ -112,7 +112,7 @@ const t = useTranslations(lang);
             <div class="relative pl-16">
               <dt class="text-base font-semibold leading-7">
                 <div class="absolute left-0 top-0 flex h-10 w-10 items-center justify-center rounded-lg bg-primary">
-                  <svg class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                  <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M7.864 4.243A7.5 7.5 0 0119.5 10.5c0 2.92-.556 5.709-1.568 8.268M5.742 6.364A7.465 7.465 0 004.5 10.5a7.464 7.464 0 01-1.15 3.993m1.989 3.559A11.209 11.209 0 008.25 10.5a3.75 3.75 0 117.5 0c0 .527-.021 1.049-.064 1.565M12 10.5a14.94 14.94 0 01-3.6 9.75m6.633-4.596a18.666 18.666 0 01-2.485 5.33" />
                   </svg>
                 </div>
@@ -127,14 +127,15 @@ const t = useTranslations(lang);
     
 
 
-          <div class="mx-auto max-w-2xl sm:text-center not-prose mt-44">
-            <h2 class="text-6xl font-bold tracking-tight text-primary">Без подвоха</h2>
-            <p class="mt-6 text-lg leading-8">Цены которые не пугают своими <span class="uppercase font-black">размерами</span></p>
+          <div class="mx-auto sm:text-center not-prose mt-44">
+            <h2 class="text-6xl font-bold tracking-tight text-primary">Прозрачнее чем когда либо</h2>
+            <p class="mt-6 text-lg leading-8">Цены которые не пугают своими <span class="uppercase font-black">размерами,</span> заказывая услугу вы автоматически соглашаетесь с условиями <a class="link link-primary" href="#">сотрудничества.</a></p>
+            
           </div>
 
           <div class="mb-10">
-            <div class="mx-auto mt-10 p-5 flex-row w-full bg-base-100 rounded-box ring-1 ring-secondary/20 sm:mt-20 lg:mx-0 lg:flex lg:max-w-none">
-              <div class="p-8 sm:p-10 grid grid-flow-row isolate relative">
+            <div class="mx-auto mt-10 p-5 flex-row w-full rounded-box sm:mt-20 lg:mx-0 lg:flex lg:max-w-none">
+              <div class="p-8 sm:p-10 grid grid-flow-row isolate relative overflow-hidden">
                 <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
                   <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.07]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
                 </div>
@@ -177,7 +178,7 @@ const t = useTranslations(lang);
                   </li>
                 </ul>
               </div>
-              <div class="-mt-2 p-2 lg:mt-0 lg:w-full lg:max-w-md lg:flex-shrink-0">
+              <div class="-mt-2 p-2 lg:mt-0 lg:w-full lg:max-w-md lg:flex-shrink-0 shadow-xl shadow-primary/10 rounded-box">
                 <div class="rounded-box  bg-base-300 py-10 text-center ring-1 ring-inset ring-gray-900/5 lg:flex lg:flex-col lg:justify-center lg:py-16">
                   <div class="mx-auto max-w-xs px-8">
                     <p class="text-base font-semibold">Плати раз, пользуйся всегда.</p>
@@ -194,8 +195,14 @@ const t = useTranslations(lang);
               </div>
             </div>
 
-            <div class="mx-auto mt-16 p-5 flex-row w-full bg-base-100 rounded-box ring-1 ring-secondary/20 sm:mt-20 lg:mx-0 lg:flex lg:max-w-none">
-              <div class="p-8 sm:p-10 grid grid-flow-row">
+            <div class="mx-auto mt-16 p-5 flex-row w-full rounded-box sm:mt-20 lg:mx-0 lg:flex lg:max-w-none">
+              <div class="p-8 sm:p-10 grid grid-flow-row isolate relative overflow-hidden">
+                <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
+                  <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.07]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+                </div>
+                <div class="absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu" aria-hidden="true">
+                  <div class="aspect-[1097/845] w-[68.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-[0.07]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+                </div>
                 <div>
                   <h2 class="text-4xl font-black tracking-tight not-prose">Project <span class="text-accent">L</span></h2>
                   <p class="mt-6 text-base leading-7">
@@ -233,7 +240,7 @@ const t = useTranslations(lang);
                   </li>
                 </ul>
               </div>
-              <div class="-mt-2 p-2 lg:mt-0 lg:w-full lg:max-w-md lg:flex-shrink-0">
+              <div class="-mt-2 p-2 lg:mt-0 lg:w-full lg:max-w-md lg:flex-shrink-0 shadow-xl shadow-primary/10 rounded-box">
                 <div class="rounded-box  bg-base-300 py-10 text-center ring-1 ring-inset ring-gray-900/5 lg:flex lg:flex-col lg:justify-center lg:py-16">
                   <div class="mx-auto max-w-xs px-8">
                     <p class="text-base font-semibold">Плати раз, пользуйся всегда.</p>
