--- a/src/pages/ru/portfolio/vratskyi-blog.astro
+++ b/src/pages/ru/portfolio/vratskyi-blog.astro
@@ -58,18 +58,15 @@ const t = useTranslations(lang);
 
           <div class="grid lg:grid-flow-col gap-x-20 place-content-center place-items-start mt-[60px] lg:mt-[80px] p-5 md:p-0">
             <div class="p-5">
-                <h1 class="relative">Персональный блог и портфолио
+                <h1 class="relative">{t('portfolio.card.2.title')}
             </h1>
-            <p class="prose">
-                Разработал этот шаблон во время изучения <a class="link link-primary" href="https://astro.build/" target="_blank"> Astro Framework</a>, очень рад что комьюнити восприняло его <a class="link link-primary" href="https://github.com/vratskyi/vratskyi.github.io" target="_blank">положительно,</a> так-же его <a class="link link-primary" href="https://astro.build/themes/details/ov-template/" target="_blank">добавили</a> на сайт Astro.</a> 
-                Шаблон абсолютно бесплатный, мультиязычный, он позволяет писать блог, рассказать о себе и я думаю он довольно оригинальный вплане дизайна, обновляю его в свободное время.
-            </p>
+            <p class="prose" set:html={t('portfolio.card.2.page.description')}></p>
             <div class="grid grid-flow-col gap-x-5 place-content-center place-items-start mt-10 bg-base-200/20 backdrop-blur-3xl rounded-box p-5 lg:p-10">
                 <div class="grid place-items-center">
                   <svg class="inline-block w-8 h-8 text-primary" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
                     <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M10 3H8a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-2m-4 0h4m-4 0v1m4-1v1m0 0a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v0m4 0h-4m2 10.008" />
                   </svg>
-                    <p class="text-xs">Адаптивный</p>
+                    <p class="text-xs">{t('portfolio.card.2.futures.1')}</p>
                 </div>
                 <div class="divider divider-horizontal"></div>
                 <div class="grid place-items-center">
@@ -91,14 +88,14 @@ const t = useTranslations(lang);
                         </mask>
                         <rect width="24" height="24" fill="currentColor" mask="url(#lineMdSpeedLoop0)" />
                       </svg>
-                    <p class="text-xs">Оптимизированный</p>
+                    <p class="text-xs">{t('portfolio.card.2.futures.2')}</p>
                 </div>
                 <div class="divider divider-horizontal"></div>
                 <div class="grid place-items-center">
                     <svg class="inline-block w-8 h-8 text-primary" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 15 15">
                         <path fill="currentColor" fill-rule="evenodd" d="M3.88 1h7.24c.403 0 .735 0 1.006.022c.281.023.54.072.782.196a2 2 0 0 1 .874.874c.124.243.173.501.196.782c.022.27.022.603.022 1.005v7.241c0 .403 0 .735-.022 1.006c-.023.281-.072.54-.196.782a2 2 0 0 1-.874.874c-.243.124-.501.173-.782.196c-.27.022-.603.022-1.005.022H3.88c-.403 0-.735 0-1.006-.022c-.281-.023-.54-.072-.782-.196a2 2 0 0 1-.874-.874c-.124-.243-.173-.501-.196-.782C1 11.856 1 11.523 1 11.12V3.88c0-.403 0-.735.022-1.006c.023-.281.072-.54.196-.782a2 2 0 0 1 .874-.874c.243-.124.501-.173.782-.196C3.144 1 3.477 1 3.88 1m-.924 1.019c-.22.018-.332.05-.41.09a1 1 0 0 0-.437.437c-.04.078-.072.19-.09.41C2 3.18 2 3.472 2 3.9V7h5V2H3.9c-.428 0-.72 0-.944.019M7 8H2v3.1c0 .428 0 .72.019.944c.018.22.05.332.09.41a1 1 0 0 0 .437.437c.078.04.19.072.41.09c.225.019.516.019.944.019H7zm1 0h5v3.1c0 .428 0 .72-.019.944c-.018.22-.05.332-.09.41a1 1 0 0 1-.437.437c-.078.04-.19.072-.41.09c-.225.019-.516.019-.944.019H8zm5-1H8V2h3.1c.428 0 .72 0 .944.019c.22.018.332.05.41.09a1 1 0 0 1 .437.437c.04.078.072.19.09.41c.019.225.019.516.019.944z" clip-rule="evenodd" />
                     </svg>
-                    <p class="text-xs">Функциональный</p>
+                    <p class="text-xs">{t('portfolio.card.2.futures.3')}</p>
                 </div>
             </div>
             <div class="grid grid-flow-col gap-x-10 place-content-center place-items-center mt-10">
@@ -143,7 +140,7 @@ const t = useTranslations(lang);
                       <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://vratskyi.pages.dev/en/" target="_blank">https://vratskyi.pages.dev/en/</a></div>
                     </div>
                     <div class="flex justify-center bg-base-200">
-                        <Image src={vratskyiBlog} transition:name='Персональный блог и портфолио' class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" format='avif' alt='Персональный блог и портфолио' width='600' height='400' />
+                        <Image src={vratskyiBlog} transition:name={t('portfolio.card.2.title')} class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" format='avif' alt='Персональный блог и портфолио' width='600' height='400' />
                     </div>
                   </div>
             </div>
